alignment details webgl working upgrade dependencies fix math to calculate alignment details offsets add in scroller props propertly add unmounting logic to hooks for resize sensors move css from weggl component to alignmentdetails update snapshots

--- a/src/components/AlignmentDetails.scss
+++ b/src/components/AlignmentDetails.scss
@@ -28,3 +28,24 @@
     }
   }
 }
+
+.vertical-scrollbar-holder {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(256, 256, 256, 0.8);
+
+  .vertical-scrollbar {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+}
+
+.vertical-scrollbar-fullpage-drag {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
